Fixes #14 - Add version information